tests/rustdoc-ui/check-fail.stderr
error: missing documentation for a function
  --> $DIR/check-fail.rs:13:1
   |
LL | pub fn foo() {}
   | ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:4:9
   |
LL | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/check-fail.rs:13:1
   |
LL | pub fn foo() {}
   | ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:5:9
   |
LL | #![deny(rustdoc::missing_doc_code_examples)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown attribute `testharness`. Did you mean `test_harness`?
  --> $DIR/check-fail.rs:8:1
   |
LL | / //! ```rust,testharness
LL | |
LL | | //! let x = 12;
LL | | //! ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or the code will be wrapped inside a main function
note: the lint level is defined here
  --> $DIR/check-fail.rs:6:9
   |
LL | #![deny(rustdoc::all)]
   |         ^^^^^^^^^^^^
   = note: `#[deny(rustdoc::invalid_codeblock_attributes)]` implied by `#[deny(rustdoc::all)]`

error: unknown attribute `testharness`. Did you mean `test_harness`?
  --> $DIR/check-fail.rs:17:1
   |
LL | / /// hello
LL | |
LL | | ///
LL | | /// ```rust,testharness
LL | | /// let x = 12;
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or the code will be wrapped inside a main function

error: aborting due to 4 previous errors

